syntax = "proto3";

package ywhub.micro.v1.basic.srv.user;

service User {
	rpc QueryUserByName (Request) returns (Response) {
	}
	rpc CreateNewUser (Request) returns (Response) {
	}
}

message user {
	int64 id = 1;
	string username = 2;
	string password = 3;
	string email = 4;
	uint64 createTime = 5;
	uint64 updateTime = 6;
}

message Error {
	int32 code = 1;
	string detail = 2;
}

message Request {
	string userID = 1;
	string userName = 2;
	string userPwd = 3;
	string email = 4;
}

message Response {
	bool success = 1;
	Error error = 2;
	user user = 3;
}

message StreamingRequest {
	int64 count = 1;
}

message StreamingResponse {
	int64 count = 1;
}

message Ping {
	int64 stroke = 1;
}

message Pong {
	int64 stroke = 1;
}
